@@ -1,0 +1,9 @@
+#include <ctime>
+
+#include "Games/Slots.h"
+
+int main() {
+    srand(time(NULL));
+    
+    return 0;
+}
