@@ -1,2 +1,3 @@
 5/16/2021
 - Initial release of "Crap Casino"
+- Added spin feature to "Slots" minigame
